--- a/src/app/panel-why/modules/pagos/components/tabla-pagos/tabla-pagos.component.html
+++ b/src/app/panel-why/modules/pagos/components/tabla-pagos/tabla-pagos.component.html
@@ -5,38 +5,38 @@
 
         <ng-container matColumnDef="points">
           <th mat-header-cell *matHeaderCellDef> Puntos </th>
-          <td mat-cell *matCellDef="let element"> {{element.points}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.TransactionPayment.points}} </td>
         </ng-container>
 
         <ng-container matColumnDef="value">
           <th mat-header-cell *matHeaderCellDef> Valor </th>
-          <td mat-cell *matCellDef="let element"> {{element.value | currency:'':'symbol':'1.0'}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.TransactionPayment.value | currency:'':'symbol':'1.0'}} </td>
         </ng-container>
 
 
         <ng-container matColumnDef="mobile_number">
           <th mat-header-cell *matHeaderCellDef> Cuenta </th>
-          <td mat-cell *matCellDef="let element"> {{element.mobile_number}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.TransactionPayment.mobile_number}} </td>
         </ng-container>
 
         <ng-container matColumnDef="way_to_pay">
           <th mat-header-cell *matHeaderCellDef> Forma de pago </th>
-          <td mat-cell *matCellDef="let element"> {{element.way_to_pay}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.TransactionPayment.way_to_pay}} </td>
         </ng-container>
 
         <ng-container matColumnDef="date_payed">
             <th mat-header-cell *matHeaderCellDef> Fecha de pago </th>
-            <td mat-cell *matCellDef="let element"> {{element.date_payed | date:'dd/MM/YYYY'}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.TransactionPayment.date_payed | date:'dd/MM/YYYY'}} </td>
         </ng-container>
 
         <ng-container matColumnDef="transaction_type">
             <th mat-header-cell *matHeaderCellDef> Tipo </th>
-            <td mat-cell *matCellDef="let element"> {{element.transaction_type }} </td>
+            <td mat-cell *matCellDef="let element"> {{element.TransactionPayment.transaction_type }} </td>
         </ng-container>
 
         <ng-container matColumnDef="observation">
             <th mat-header-cell *matHeaderCellDef> Observación </th>
-            <td mat-cell *matCellDef="let element"> {{element.observation}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.TransactionPayment.observation}} </td>
         </ng-container>
 
 
@@ -47,9 +47,10 @@
           <td class="mat-cell" colspan="4">No hay datos para mostrar</td>
         </tr>
       </table>
-      <mat-paginator style="width: 100%;"
-      [pageSize]="10"
-      [pageSizeOptions] = "[10,20,100]"
+      <mat-paginator [length]="length"
+      [pageSize]="pageSize"
+      (page) ="pageEvent($event)"
+      [pageSizeOptions] = "pageSizeOptions"
       >
     </mat-paginator>
   </div>
