--- a/src/app/panel-why/modules/usuarios/tabla-usuarios/tabla-usuarios.component.scss
+++ b/src/app/panel-why/modules/usuarios/tabla-usuarios/tabla-usuarios.component.scss
@@ -1,1 +1,24 @@
 @import url(../../../panel-why.component.scss);
+
+.masivos{
+    padding-left: 2em;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3,25%) 5%;
+    gap: 2em;
+    flex-direction: row;
+    mat-form-field{
+        width: 100%;
+    }
+    button{
+        width: 100%;
+        margin-top: .5em;
+    }
+
+    #btn-plantilla{
+        mat-icon{
+            margin-top: 1em;
+            margin-left: -4em;
+        }
+    }
+}
