--- a/src/app/panel-why/modules/usuarios/components/tabla-usuarios/tabla-usuarios.component.scss
+++ b/src/app/panel-why/modules/usuarios/components/tabla-usuarios/tabla-usuarios.component.scss
@@ -1,4 +1,4 @@
-@import url(../../../panel-why.component.scss);
+@import url(../../../../panel-why.component.scss);
 
 .masivos{
     padding-left: 2em;
