--- a/src/app/panel-why/modules/pagos-admin/tabla-pagos-admin/tabla-pagos-admin.component.html
+++ b/src/app/panel-why/modules/pagos-admin/tabla-pagos-admin/tabla-pagos-admin.component.html
@@ -64,7 +64,7 @@
     </button>
   </div>
   <div class="col-5 me-4 mb-4">
-    <button mat-raised-button class="btn-succ">Crear Pago
+    <button mat-raised-button class="btn-succ" (click)="newPay()">Crear Pago
       <mat-icon matSuffix style="font-size: 16px;"><i class="fi-rr-add"></i></mat-icon>
     </button>
   </div>
