--- a/src/app/panel-why/modules/perfiles/tabla-perfiles/tabla-perfiles.component.html
+++ b/src/app/panel-why/modules/perfiles/tabla-perfiles/tabla-perfiles.component.html
@@ -56,7 +56,7 @@
     </button>
   </div>
   <div class="col-5 me-4 mb-4">
-    <button mat-raised-button class="btn-succ">Crear Perfil
+    <button mat-raised-button class="btn-succ" (click)="newProfile()">Crear Perfil
       <mat-icon matSuffix style="font-size: 16px;"><i class="fi-rr-add"></i></mat-icon>
     </button>
   </div>
@@ -73,8 +73,8 @@
                   <mat-icon style="font-size: 1em;"><i class="fi-rr-menu-dots-vertical"></i></mat-icon>
                 </button>
                 <mat-menu #menu="matMenu">
-                  <button mat-menu-item>Ver detalle</button>
-                  <button mat-menu-item>Editar</button>
+                  <button mat-menu-item (click)="detailProfile(element,false)">Ver detalle</button>
+                  <button mat-menu-item (click)="detailProfile(element,true)">Editar</button>
                 </mat-menu>
               </td>
             </div>
