--- a/src/app/panel-why/modules/puntos-admin/tabla-puntos-admin/tabla-puntos-admin.component.html
+++ b/src/app/panel-why/modules/puntos-admin/tabla-puntos-admin/tabla-puntos-admin.component.html
@@ -69,7 +69,7 @@
     </button>
   </div>
   <div class="col-5 me-4 mb-4">
-    <button mat-raised-button class="btn-succ">Crear Punto
+    <button mat-raised-button class="btn-succ" (click)="newPoints()">Crear Punto
       <mat-icon matSuffix style="font-size: 16px;"><i class="fi-rr-add"></i></mat-icon>
     </button>
   </div>
